--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,9 @@ hs_err_pid*
 
 target/
 */target/*
+*/target/**
 pom.xml.tag
+pom.properties
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
